--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jackal",
-  "version": "1.14.0",
+  "version": "1.15.0",
   "private": true,
   "scripts": {
     "report-ci": "lighthouse-ci http://jackal.surge.sh --report=./public",
@@ -20,6 +20,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.13.1",
     "react-player": "^2.9.0",
     "react-toastify": "^7.0.4",
