--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 14
       - run: npm install
+      - run: npm install -g surge
       # - run: npm install -g surge lighthouse lighthouse-ci
       # - run: npm run report-ci
       - run: npm run export
