--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-countup": "^4.4.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "4.2.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.13.1",
     "react-player": "^2.9.0",
