--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 * * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
       - name: Install surge and fire deployment
         uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
       - run: npm install
       - run: npm install -g surge
       # - run: npm install -g surge lighthouse lighthouse-ci
